--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "16.7.0-alpha.0",
+    "react-cache": "16.6.0-alpha.8af6728",
     "react-dom": "16.7.0-alpha.0",
     "react-scripts": "2.1.1"
   },
